--- a/pico/CMakeLists.txt
+++ b/pico/CMakeLists.txt
@@ -8,6 +8,7 @@ include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
 project(nerfdome C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
+set(PICO_BOARD pico_w)
 
 # Creates a pico-sdk subdirectory in our project for the libraries
 pico_sdk_init()
